Modifiche ai componenti checkout e thank-you-page

--- a/src/app/componenti/checkout/checkout.component.html
+++ b/src/app/componenti/checkout/checkout.component.html
@@ -297,7 +297,7 @@
               Indietro
             </button>
             <button type="submit" class="btn btn-primary" [disabled]="!isPaymentValid()">
-              Continua alla Verifica
+              Verifica
             </button>
           </div>
         </form>
