--- a/src/app/componenti/thank-you-page/thank-you-page.component.scss
+++ b/src/app/componenti/thank-you-page/thank-you-page.component.scss
@@ -257,6 +257,8 @@
       background: #f8f9fa;
       padding: 4px 8px;
       border-radius: 6px;
+      display: inline-block;
+      width: fit-content;
     }
   }
   
@@ -264,6 +266,11 @@
     font-size: 0.9rem;
     color: #666;
     font-weight: 500;
+    background: #f8f9fa;
+    padding: 4px 8px;
+    border-radius: 6px;
+    display: inline-block;
+    width: fit-content;
   }
 }
 
@@ -451,8 +458,11 @@
   .item-variants {
     flex-direction: column;
     gap: 5px !important;
+
   }
-  
+.item-details{
+  padding-left: 20px;
+}
   .action-section {
     grid-template-columns: 1fr;
   }
